Init basic webpage to display placeflow functionalities

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 
 <html>
 	<head>
+        <title>PlaceFlow.js</title>
+
+        <!-- META info -->
+        <meta name="theme-color" content="#64b1fc" />
+        
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 
-	<body>
+	<body class="place-flow" data-hi-res="/res/WarrenBear_large.png" data-low-res="/res/WarrenBear_small.jpg">
 
-		Hello, World!
+		<h1>PlaceFlow.js</h1>
 
 		<footer>
 			<script type="text/javascript" src="dist/placeflow.js"></script>
