Use absolute source locations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 
-	<body class="place-flow" data-hi-res="/res/WarrenBear_large.png" data-low-res="/res/WarrenBear_small.jpg">
+	<body class="place-flow" data-hi-res="https://kennywibowo.github.io/PlaceFlow/res/WarrenBear_large.png" data-low-res="https://kennywibowo.github.io/PlaceFlow/res/WarrenBear_small.jpg">
 
 		<h1>PlaceFlow.js</h1>
 
