Fancify title and text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
+    <head>
         <title>PlaceFlow.js</title>
 
         <!-- META info -->
@@ -9,17 +9,20 @@
         
         <!-- Custom CSS -->
         <link rel="stylesheet" type="text/css" href="style/style.css">
-	</head>
+    </head>
 
-	<body class="place-flow" data-hi-res="https://kennywibowo.github.io/PlaceFlow/res/WarrenBear_large.png" data-low-res="https://kennywibowo.github.io/PlaceFlow/res/WarrenBear_small.jpg">
+    <body class="place-flow" data-hi-res="https://kennywibowo.github.io/PlaceFlow/res/WarrenBear_large.png" data-low-res="https://kennywibowo.github.io/PlaceFlow/res/WarrenBear_small.jpg">
 
-		<h1>PlaceFlow.js</h1>
+        <div>
+            <h1 class="title">PlaceFlow.js</h1>
+            <p class="content">A progressive image renderer.</p>
+        </div>
 
-		<footer>
-			<script type="text/javascript" src="dist/placeflow.js"></script>
-			<script>
-				new PlaceFlow().init();
-			</script>
-		</footer>
-	</body>
+        <footer>
+            <script type="text/javascript" src="dist/placeflow.js"></script>
+            <script>
+                new PlaceFlow().init();
+            </script>
+        </footer>
+    </body>
 </html>
