Link both together

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         <div>
             <h1 class="title">PlaceFlow.js</h1>
-            <p class="content">A progressive image renderer.</p>
+            <p class="content">A progressive image renderer, work in progress.</p>
+            <a class="content" href="https://github.com/KennyWibowo/PlaceFlow">Source files located here.</a>
         </div>
 
         <footer>
